# speck-kit-driven-development-hackathon

./: .env.example  .gitignore  =1.21.0  CONNECTION_FIX_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.hf  HUGGINGFACE_DEPLOYMENT_GUIDE.md  LICENSE  LOCAL_TESTING_GUIDE.md  PROFESSIONAL_README.md  README.md  TROUBLESHOOTING_GUIDE.md  app.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  run_server_fixed.py  test_clean_backend.py  test_rag_implementation.py  test_rag_pipeline.py  vercel.json  verify_implementation.py
backend/: .env.example  TESTING_GUIDE.md  api_test.py  final_test.py  ingest_textbook.py  pyproject.toml  requirements.txt  requirements_basic.txt  requirements_hf.txt  requirements_hf_optimized.txt  run_server.py  simple_test.py  start_server.py  test_backend.py  test_endpoints.py  test_fix.py  test_pipeline.py  test_query_endpoint.py  test_server.py
backend/src/: __init__.py  config.py  logging_config.py  main.py
backend/src/cli/: ingestion_cli.py
backend/src/models/: academic_query.py  content_chunk.py  conversation_session.py  conversation_turn.py  definition.py  embedding_vector.py  example.py  ingestion_job.py  query_models.py  reference.py  step.py  step_by_step.py  structured_content.py  textbook_response.py
backend/src/services/: chunking_service.py  citation_service.py  confidence_fallback.py  content_processor.py  content_validation.py  conversation_service.py  crawler.py  embedding_service.py  embedding_updater.py  guardrails.py  hallucination_prevention.py  llm_service.py  rag_service.py  vector_store.py  (+2 more)
(+150 files in other folders)
