[tool.poetry]
name = "ai-textbook-backend"
version = "0.1.0"
description = "Backend for AI-Native Textbook Platform"
authors = ["AI Developer <ai@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn[standard] = "^0.24.0"
python-multipart = "^0.0.6"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
qdrant-client = "^1.8.0"
openai = "^1.10.0"
langchain = "^0.0.339"
langchain-openai = "^0.0.5"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
neon = "^0.2.0"
better-exceptions = "^0.3.3"
types-requests = "^2.31.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3